Kelsey Development Sandbox/src/objects/DS_CBCL_F__c.object
<CustomObject>
    <fields>
        <fullName>Background_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Background ID</label>
        <referenceTo>DS_Background_Family_Info_F__c</referenceTo>
        <relationshipLabel>DS CBCL F</relationshipLabel>
        <relationshipName>DS_CBCL_F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>DS CBCL F</relationshipLabel>
        <relationshipName>DS_CBCL_F</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FCBABPY__c</fullName>
        <description>CBCL Aggressive Behavior percent</description>
        <label>FCBABPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBABP__c</fullName>
        <description>CBCL Aggressive Behavior percent</description>
        <label>FCBABP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBABRNY__c</fullName>
        <description>CBCL Aggressive Behavior raw score - Num</description>
        <label>FCBABRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBABRN__c</fullName>
        <description>CBCL Aggressive Behavior raw score - Num</description>
        <label>FCBABRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBABRY__c</fullName>
        <description>CBCL Aggressive Behavior raw score</description>
        <label>FCBABRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBABR__c</fullName>
        <description>CBCL Aggressive Behavior raw score</description>
        <label>FCBABR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBABSY__c</fullName>
        <description>CBCL Aggressive Behavior clinical significance</description>
        <label>FCBABSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBABS__c</fullName>
        <description>CBCL Aggressive Behavior clinical significance</description>
        <label>FCBABS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBABTNY__c</fullName>
        <description>CBCL Aggressive Behavior T score - Num</description>
        <label>FCBABTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBABTN__c</fullName>
        <description>CBCL Aggressive Behavior T score - Num</description>
        <label>FCBABTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBABTY__c</fullName>
        <description>CBCL Aggressive Behavior T score</description>
        <label>FCBABTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBABT__c</fullName>
        <description>CBCL Aggressive Behavior T score</description>
        <label>FCBABT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBADPY__c</fullName>
        <description>CBCL Anxious Depressed percent</description>
        <label>FCBADPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBADP__c</fullName>
        <description>CBCL Anxious Depressed percent</description>
        <label>FCBADP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBADRNY__c</fullName>
        <description>CBCL Anxious Depressed raw score - Num</description>
        <label>FCBADRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBADRN__c</fullName>
        <description>CBCL Anxious Depressed raw score - Num</description>
        <label>FCBADRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBADRY__c</fullName>
        <description>CBCL Anxious Depressed raw score</description>
        <label>FCBADRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBADR__c</fullName>
        <description>CBCL Anxious Depressed raw score</description>
        <label>FCBADR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBADSY__c</fullName>
        <description>CBCL Anxious Depressed clinical significance</description>
        <label>FCBADSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBADS__c</fullName>
        <description>CBCL Anxious Depressed clinical significance</description>
        <label>FCBADS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBADTNY__c</fullName>
        <description>CBCL Anxious Depressed T score - Num</description>
        <label>FCBADTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBADTN__c</fullName>
        <description>CBCL Anxious Depressed T score - Num</description>
        <label>FCBADTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBADTY__c</fullName>
        <description>CBCL Anxious Depressed T score</description>
        <label>FCBADTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBADT__c</fullName>
        <description>CBCL Anxious Depressed T score</description>
        <label>FCBADT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBAPPCNY__c</fullName>
        <description>The record is applicable or not</description>
        <label>FCBAPPCNY</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBAPPCN__c</fullName>
        <description>The record is applicable or not</description>
        <label>FCBAPPCN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBAPPCY__c</fullName>
        <formula>IF( FCBAPPCNY__c = 1 , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCBAPPCY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBAPPC__c</fullName>
        <formula>IF( FCBAPPCN__c = 1 , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCBAPPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBAPPY__c</fullName>
        <description>CBCL Attention problems percent</description>
        <label>FCBAPPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBAPP__c</fullName>
        <description>CBCL Attention problems percent</description>
        <label>FCBAPP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBAPRNY__c</fullName>
        <description>CBCL Attention problems raw score - Num</description>
        <label>FCBAPRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBAPRN__c</fullName>
        <description>CBCL Attention problems raw score - Num</description>
        <label>FCBAPRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBAPRY__c</fullName>
        <description>CBCL Attention problems raw score</description>
        <label>FCBAPRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBAPR__c</fullName>
        <description>CBCL Attention problems raw score</description>
        <label>FCBAPR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBAPSY__c</fullName>
        <description>CBCL Attention problems clinical significance</description>
        <label>FCBAPSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBAPS__c</fullName>
        <description>CBCL Attention problems clinical significance</description>
        <label>FCBAPS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBAPTNY__c</fullName>
        <description>CBCL Attention problems T score - Num</description>
        <label>FCBAPTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBAPTN__c</fullName>
        <description>CBCL Attention problems T score - Num</description>
        <label>FCBAPTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBAPTY__c</fullName>
        <description>CBCL Attention problems T score</description>
        <label>FCBAPTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBAPT__c</fullName>
        <description>CBCL Attention problems T score</description>
        <label>FCBAPT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBEBPY__c</fullName>
        <description>CBCL Externalizing behavior percent</description>
        <label>FCBEBPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBEBP__c</fullName>
        <description>CBCL Externalizing behavior percent</description>
        <label>FCBEBP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBEBRNY__c</fullName>
        <description>CBCL Externalizing behavior raw score - Num</description>
        <label>FCBEBRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBEBRN__c</fullName>
        <description>CBCL Externalizing behavior raw score - Num</description>
        <label>FCBEBRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBEBRY__c</fullName>
        <description>CBCL Externalizing behavior raw score</description>
        <label>FCBEBRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBEBR__c</fullName>
        <description>CBCL Externalizing behavior raw score</description>
        <label>FCBEBR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBEBSY__c</fullName>
        <description>CBCL Externalizing behavior clinical significance</description>
        <label>FCBEBSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBEBS__c</fullName>
        <description>CBCL Externalizing behavior clinical significance</description>
        <label>FCBEBS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBEBTNY__c</fullName>
        <description>CBCL Externalizing behavior T score - Num</description>
        <label>FCBEBTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBEBTN__c</fullName>
        <description>CBCL Externalizing behavior T score - Num</description>
        <label>FCBEBTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBEBTY__c</fullName>
        <description>CBCL Externalizing behavior T score</description>
        <label>FCBEBTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBEBT__c</fullName>
        <description>CBCL Externalizing behavior T score</description>
        <label>FCBEBT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBERPY__c</fullName>
        <description>CBCL Emotionally reactive percent</description>
        <label>FCBERPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBERRNY__c</fullName>
        <description>CBCL Emotionally reactive raw score - Num</description>
        <label>FCBERRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBERRY__c</fullName>
        <description>CBCL Emotionally reactive raw score</description>
        <label>FCBERRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBERSY__c</fullName>
        <description>CBCL Emotionally reactive clinical significance</description>
        <label>FCBERSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBERTNY__c</fullName>
        <description>CBCL Emotionally reactive T score - Num</description>
        <label>FCBERTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBERTY__c</fullName>
        <description>CBCL Emotionally reactive T score</description>
        <label>FCBERTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBIBPY__c</fullName>
        <description>CBCL Internalizing behavior percent</description>
        <label>FCBIBPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBIBP__c</fullName>
        <description>CBCL Internalizing behavior percent</description>
        <label>FCBIBP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBIBRNY__c</fullName>
        <description>CBCL Internalizing behavior raw score - Num</description>
        <label>FCBIBRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBIBRN__c</fullName>
        <description>CBCL Internalizing behavior raw score - Num</description>
        <label>FCBIBRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBIBRY__c</fullName>
        <description>CBCL Internalizing behavior raw score</description>
        <label>FCBIBRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBIBR__c</fullName>
        <description>CBCL Internalizing behavior raw score</description>
        <label>FCBIBR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBIBSY__c</fullName>
        <description>CBCL Internalizing behavior clinical significance</description>
        <label>FCBIBSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBIBS__c</fullName>
        <description>CBCL Internalizing behavior clinical significance</description>
        <label>FCBIBS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBIBTNY__c</fullName>
        <description>CBCL Internalizing behavior T score - Num</description>
        <label>FCBIBTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBIBTN__c</fullName>
        <description>CBCL Internalizing behavior T score - Num</description>
        <label>FCBIBTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBIBTY__c</fullName>
        <description>CBCL Internalizing behavior T score</description>
        <label>FCBIBTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBIBT__c</fullName>
        <description>CBCL Internalizing behavior T score</description>
        <label>FCBIBT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBO100__c</fullName>
        <description>100. Trouble sleeping</description>
        <label>FCBO100</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBO101__c</fullName>
        <description>101. Truancy, skips school</description>
        <label>FCBO101</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBO102__c</fullName>
        <description>102. Underactive, slow moving, or lacks energy</description>
        <label>FCBO102</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBO113S__c</fullName>
        <description>113. Other 1 specify</description>
        <label>FCBO113S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBO114S__c</fullName>
        <description>114. Other 2 specify</description>
        <label>FCBO114S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBO115S__c</fullName>
        <description>115. Other 3 specify</description>
        <label>FCBO115S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBO56A__c</fullName>
        <description>56. Aches or pains (not stomach or headaches)</description>
        <label>FCBO56A</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBO56B__c</fullName>
        <description>56. Headaches</description>
        <label>FCBO56B</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBO56C__c</fullName>
        <description>56. Nausea, feels sick</description>
        <label>FCBO56C</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBO56D__c</fullName>
        <description>56. Problems with eyes (not if corrected by glasses)</description>
        <label>FCBO56D</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBO56E__c</fullName>
        <description>56. Rashes or other skin problems</description>
        <label>FCBO56E</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBO56F__c</fullName>
        <description>56. Stomachaches</description>
        <label>FCBO56F</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBO56G__c</fullName>
        <description>56. Vomiting, throwing up</description>
        <label>FCBO56G</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBO56HS__c</fullName>
        <description>56. Other, please describe</description>
        <label>FCBO56HS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBO56H__c</fullName>
        <description>56. Other</description>
        <label>FCBO56H</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBOMETH__c</fullName>
        <description>Administration Method - CBCL OLD</description>
        <label>FCBOMETH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBOTPNY__c</fullName>
        <description>CBCL Other Total Problems raw score - Num</description>
        <label>FCBOTPNY</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBOTPN__c</fullName>
        <description>CBCL Other Total Problems raw score - Num</description>
        <label>FCBOTPN</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBRBP__c</fullName>
        <description>CBCL Rule breaking percent</description>
        <label>FCBRBP</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBRBRN__c</fullName>
        <description>CBCL Rule breaking raw score - Num</description>
        <label>FCBRBRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBRBR__c</fullName>
        <description>CBCL Rule breaking raw score</description>
        <label>FCBRBR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBRBS__c</fullName>
        <description>CBCL Rule breaking clinical significance</description>
        <label>FCBRBS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBRBTN__c</fullName>
        <description>CBCL Rule breaking T score - Num</description>
        <label>FCBRBTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBRBT__c</fullName>
        <description>CBCL Rule breaking T score</description>
        <label>FCBRBT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSCPY__c</fullName>
        <description>CBCL Somatic complaints percent</description>
        <label>FCBSCPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSCP__c</fullName>
        <description>CBCL Somatic complaints percent</description>
        <label>FCBSCP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSCRNY__c</fullName>
        <description>CBCL Somatic complaints raw score - Num</description>
        <label>FCBSCRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBSCRN__c</fullName>
        <description>CBCL Somatic complaints raw score - Num</description>
        <label>FCBSCRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBSCRY__c</fullName>
        <description>CBCL Somatic complaints raw score</description>
        <label>FCBSCRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSCR__c</fullName>
        <description>CBCL Somatic complaints raw score</description>
        <label>FCBSCR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSCSY__c</fullName>
        <description>CBCL Somatic complaints clinical significance</description>
        <label>FCBSCSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSCS__c</fullName>
        <description>CBCL Somatic complaints clinical significance</description>
        <label>FCBSCS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSCTNY__c</fullName>
        <description>CBCL Somatic complaints T score - Num</description>
        <label>FCBSCTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBSCTN__c</fullName>
        <description>CBCL Somatic complaints T score - Num</description>
        <label>FCBSCTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBSCTY__c</fullName>
        <description>CBCL Somatic complaints T score</description>
        <label>FCBSCTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSCT__c</fullName>
        <description>CBCL Somatic complaints T score</description>
        <label>FCBSCT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSOP__c</fullName>
        <description>CBCL Social problems percent</description>
        <label>FCBSOP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSORN__c</fullName>
        <description>CBCL Social problems raw score - Num</description>
        <label>FCBSORN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBSOR__c</fullName>
        <description>CBCL Social problems raw score</description>
        <label>FCBSOR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSOS__c</fullName>
        <description>CBCL Social problems clinical significance</description>
        <label>FCBSOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSOTN__c</fullName>
        <description>CBCL Social problems T score - Num</description>
        <label>FCBSOTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBSOT__c</fullName>
        <description>CBCL Social problems T score</description>
        <label>FCBSOT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSPPY__c</fullName>
        <description>CBCL Sleep problems percent</description>
        <label>FCBSPPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSPRNY__c</fullName>
        <description>CBCL Sleep problems raw score - Num</description>
        <label>FCBSPRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBSPRY__c</fullName>
        <description>CBCL Sleep problems raw score</description>
        <label>FCBSPRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSPSY__c</fullName>
        <description>CBCL Sleep problems clinical significance</description>
        <label>FCBSPSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBSPTNY__c</fullName>
        <description>CBCL Sleep problems T score - Num</description>
        <label>FCBSPTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBSPTY__c</fullName>
        <description>CBCL Sleep problems T score</description>
        <label>FCBSPTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBTPP__c</fullName>
        <description>CBCL Thought problems percent</description>
        <label>FCBTPP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBTPRN__c</fullName>
        <description>CBCL Thought problems raw score - Num</description>
        <label>FCBTPRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBTPR__c</fullName>
        <description>CBCL Thought problems raw score</description>
        <label>FCBTPR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBTPS__c</fullName>
        <description>CBCL Thought problems clinical significance</description>
        <label>FCBTPS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBTPTN__c</fullName>
        <description>CBCL Thought problems T score - Num</description>
        <label>FCBTPTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBTPT__c</fullName>
        <description>CBCL Thought problems T score</description>
        <label>FCBTPT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBTSPY__c</fullName>
        <description>CBCL Total percent</description>
        <label>FCBTSPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBTSP__c</fullName>
        <description>CBCL Total percent</description>
        <label>FCBTSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBTSRNY__c</fullName>
        <description>CBCL Total raw score - Num</description>
        <label>FCBTSRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBTSRN__c</fullName>
        <description>CBCL Total raw score - Num</description>
        <label>FCBTSRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBTSRY__c</fullName>
        <description>CBCL Total raw score</description>
        <label>FCBTSRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBTSR__c</fullName>
        <description>CBCL Total raw score</description>
        <label>FCBTSR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBTSSY__c</fullName>
        <description>CBCL Total clinical significance</description>
        <label>FCBTSSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>